--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
