--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@uiw/react-md-editor": "^4.0.4",
     "firebase": "^10.12.4",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
