--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "firebase": "^10.12.4",
     "mapbox-gl": "^3.5.2",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
@@ -59,6 +61,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-color": "^3.0.12",
     "autoprefixer": "^10.4.19",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.39",
