viewport culling, debounce and spatial indexing for speed on polygons

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^7.0.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^16.18.103",
+    "@types/rbush": "^3.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-icons": "^3.0.0",
@@ -19,7 +21,9 @@
     "@uiw/react-md-editor": "^4.0.4",
     "deck.gl": "^9.0.24",
     "firebase": "^10.12.4",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
+    "rbush": "^4.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
