--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-ga4": "^2.1.0",
     "react-icons": "^5.2.1",
     "react-map-gl": "^7.1.7",
     "react-markdown": "^9.0.1",
