--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.17.7",
     "@types/node": "^16.18.103",
+    "@types/papaparse": "^5.3.14",
+    "@types/proj4": "^2.5.5",
     "@types/rbush": "^3.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/shapefile": "^0.6.4",
     "@types/styled-components": "^5.1.34",
     "@uiw/react-md-editor": "^4.0.4",
     "deck.gl": "^9.0.24",
     "firebase": "^10.12.4",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
+    "papaparse": "^5.4.1",
+    "proj4": "^2.12.0",
     "rbush": "^4.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -31,11 +37,13 @@
     "react-dropzone": "^14.2.3",
     "react-ga4": "^2.1.0",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-map-gl": "^7.1.7",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "shapefile": "^0.6.6",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
