--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^7.0.0",
+    "@types/d3-scale-chromatic": "^3.0.3",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.17.7",
     "@types/node": "^16.18.103",
@@ -19,6 +20,8 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@uiw/react-md-editor": "^4.0.4",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
     "deck.gl": "^9.0.24",
     "firebase": "^10.12.4",
     "lodash": "^4.17.21",
