--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "homepage": "https://mitchstares.github.io",
   "private": true,
   "dependencies": {
+    "@deck.gl/geo-layers": "^9.0.27",
     "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^7.0.0",
     "@types/d3-scale-chromatic": "^3.0.3",
+    "@types/geojson-vt": "^3.2.5",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.17.7",
     "@types/node": "^16.18.103",
@@ -24,6 +26,7 @@
     "d3-scale-chromatic": "^3.1.0",
     "deck.gl": "^9.0.24",
     "firebase": "^10.12.4",
+    "geojson-vt": "^4.0.2",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
     "rbush": "^4.0.0",
