--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-icons": "^3.0.0",
+    "@types/react-resizable": "^3.0.8",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@uiw/react-md-editor": "^4.0.4",
@@ -31,11 +32,13 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-ga4": "^2.1.0",
     "react-icons": "^5.2.1",
     "react-map-gl": "^7.1.7",
     "react-markdown": "^9.0.1",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
