--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.12.4",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
+    "papaparse": "^5.4.1",
     "rbush": "^4.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -39,6 +40,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "shpjs": "^6.1.0",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
