--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.12.4",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.5.2",
+    "nodemailer": "^6.9.15",
     "rbush": "^4.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
